<resources>
    <string name="app_name">Penguin</string>

    <string name="text_description">Fill all the necessary fields and press Send to complete the transaction.</string>

    <string name="input_text_first_name_hint">Recipient First Name</string>
    <string name="input_text_last_name_hint">Recipient Last Name</string>
    <string name="input_text_country_hint">Recipient Country</string>
    <string name="input_text_phone_number_hint">Recipient Phone number</string>
    <string name="input_text_amount_hint">Amount in Binary</string>

    <string name="input_text_required_error">Required field</string>
    <string name="input_text_invalid_error">Invalid field</string>
    <string name="input_text_amount_helper"><b>%1$s:</b> %2$s</string>

    <string name="button_send">Send</string>

    <!-- Confirm feedback -->
    <string name="confirm_title">Confirm transaction</string>
    <string name="confirm_message">You want to send %1$s to phone number %2$s?</string>
    <string name="confirm_positive_action">Send</string>
    <string name="confirm_negative_action">Cancel</string>

    <!-- Complete feedback -->
    <string name="transaction_complete_title">Complete!</string>
    <string name="transaction_complete_message">You just sent %1$s to phone number %2$s.</string>
    <string name="transaction_positive_action">OK</string>

    <!-- Error feedback -->
    <string name="unknown_error_title">Unknown Error</string>
    <string name="unknown_error_message">Something weird happened, please try again in a few minutes.</string>

    <string name="network_error_title">Network Error</string>
    <string name="network_error_message">Check if your device is currently connected to a Mobile or Wi-Fi network.</string>

    <string name="error_positive_button">Try Again</string>
</resources>